--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,9 @@ dependencies:
   provider: ^6.0.5
   firebase_core: ^2.13.1
   firebase_auth: ^4.6.2
+  geolocator: ^9.0.2
+  latlong2: ^0.9.0
+  flutter_map: ^5.0.0
 
 dev_dependencies:
   flutter_test:
