--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,8 +40,10 @@ dependencies:
   firebase_core: ^2.13.1
   firebase_auth: ^4.6.2
   geolocator: ^9.0.2
-  latlong2: ^0.9.0
-  flutter_map: ^5.0.0
+  latlong2: ^0.8.2
+  flutter_map: ^4.0.0
+  image_picker: ^0.8.7+5
+
 
 dev_dependencies:
   flutter_test:
